[tool.poetry]
name = "virtual-chips-bot"
version = "0.1.0"
description = ""
authors = ["Nathan Yeo <yeo.nathan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
pyTelegramBotAPI = "^4.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
